--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -12,132 +12,140 @@
 }
 
 .u-section-1 .u-btn-1 {
-  background-image: none;
+  font-size: 0.875rem;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 80px auto 0 98px;
-  padding: 10px 44px 10px 43px;
+  background-image: none;
+  margin: 80px 99px 0 auto;
+  padding: 11px 18px 12px;
 }
 
 .u-section-1 .u-btn-2 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px auto 0 98px;
+  padding: 10px 44px 10px 43px;
+}
+
+.u-section-1 .u-btn-3 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px 341px 0 auto;
   padding: 10px 30px 10px 29px;
 }
 
-.u-section-1 .u-btn-3 {
+.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px auto 0 334px;
   padding: 10px 24px 10px 23px;
 }
 
-.u-section-1 .u-btn-4 {
-  background-image: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px 98px 0 auto;
-  padding: 10px 72px 10px 71px;
-}
-
 .u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 98px;
-  padding: 10px 37px 10px 36px;
+  margin: 9px 99px 0 auto;
+  padding: 10px 72px 10px 71px;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 334px;
+  margin: -45px auto 0 98px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 573px;
-  padding: 10px 130px 10px 129px;
+  margin: -45px auto 0 334px;
+  padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-8 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px auto 0 573px;
+  padding: 10px 9px;
+}
+
+.u-section-1 .u-btn-9 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 9px auto 0 98px;
   padding: 10px 39px 10px 38px;
 }
 
-.u-section-1 .u-btn-9 {
+.u-section-1 .u-btn-10 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px auto 0 334px;
   padding: 10px 39px 10px 38px;
 }
 
-.u-section-1 .u-btn-10 {
+.u-section-1 .u-btn-11 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px 341px 0 auto;
   padding: 10px 80px;
 }
 
-.u-section-1 .u-btn-11 {
+.u-section-1 .u-btn-12 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px 99px 0 auto;
   padding: 10px 45px 10px 44px;
 }
 
-.u-section-1 .u-btn-12 {
+.u-section-1 .u-btn-13 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 9px auto 0 334px;
   padding: 10px 20px;
 }
 
-.u-section-1 .u-btn-13 {
+.u-section-1 .u-btn-14 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px auto 0 98px;
   padding: 10px 36px 10px 35px;
 }
 
-.u-section-1 .u-btn-14 {
+.u-section-1 .u-btn-15 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px auto 0 574px;
   padding: 10px 94px 10px 93px;
 }
 
-.u-section-1 .u-btn-15 {
+.u-section-1 .u-btn-16 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 9px auto 0 99px;
   padding: 10px 50px 10px 49px;
 }
 
-.u-section-1 .u-btn-16 {
+.u-section-1 .u-btn-17 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px auto 0 335px;
   padding: 10px 50px;
 }
 
-.u-section-1 .u-btn-17 {
+.u-section-1 .u-btn-18 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px 99px 0 auto;
   padding: 10px 86px 10px 85px;
 }
 
-.u-section-1 .u-btn-18 {
+.u-section-1 .u-btn-19 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 9px auto 0 570px;
   padding: 10px 10px 10px 9px;
 }
 
-.u-section-1 .u-btn-19 {
+.u-section-1 .u-btn-20 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
@@ -145,14 +153,14 @@
   padding: 11px 27px 12px;
 }
 
-.u-section-1 .u-btn-20 {
+.u-section-1 .u-btn-21 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -45px auto 0 98px;
   padding: 10px 127px;
 }
 
-.u-section-1 .u-btn-21 {
+.u-section-1 .u-btn-22 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
@@ -160,7 +168,7 @@
   padding: 11px 18px 12px 17px;
 }
 
-.u-section-1 .u-btn-22 {
+.u-section-1 .u-btn-23 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
@@ -168,7 +176,7 @@
   padding: 11px 18px 12px 17px;
 }
 
-.u-section-1 .u-btn-23 {
+.u-section-1 .u-btn-24 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -44px auto 0 97px;
@@ -205,10 +213,14 @@
 
   .u-section-1 .u-btn-1 {
     margin-top: 0;
-    margin-left: -15px;
+    margin-right: 0;
   }
 
   .u-section-1 .u-btn-2 {
+    margin-left: -15px;
+  }
+
+  .u-section-1 .u-btn-3 {
     margin-top: 0;
     margin-right: 141px;
     margin-left: 474px;
@@ -216,44 +228,44 @@
     padding-right: 157px;
   }
 
-  .u-section-1 .u-btn-3 {
-    margin-top: 0;
-    margin-left: 235px;
-  }
-
   .u-section-1 .u-btn-4 {
     margin-top: 0;
-    margin-right: 0;
+    margin-left: 235px;
   }
 
   .u-section-1 .u-btn-5 {
     margin-top: 0;
-    margin-left: -15px;
+    margin-right: 0;
   }
 
   .u-section-1 .u-btn-6 {
     margin-top: 0;
-    margin-left: 235px;
+    margin-left: -15px;
   }
 
   .u-section-1 .u-btn-7 {
+    margin-top: 0;
+    margin-left: 235px;
+  }
+
+  .u-section-1 .u-btn-8 {
     margin-top: 0;
     margin-left: 474px;
     padding-left: 135px;
     padding-right: 135px;
   }
 
-  .u-section-1 .u-btn-8 {
+  .u-section-1 .u-btn-9 {
     margin-top: 0;
     margin-left: -15px;
   }
 
-  .u-section-1 .u-btn-9 {
+  .u-section-1 .u-btn-10 {
     margin-top: 0;
     margin-left: 234px;
   }
 
-  .u-section-1 .u-btn-10 {
+  .u-section-1 .u-btn-11 {
     margin-top: 0;
     margin-right: 141px;
     margin-left: 474px;
@@ -261,81 +273,81 @@
     padding-left: 207px;
   }
 
-  .u-section-1 .u-btn-11 {
+  .u-section-1 .u-btn-12 {
     margin-top: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-btn-12 {
+  .u-section-1 .u-btn-13 {
     margin-top: 0;
     margin-left: 235px;
   }
 
-  .u-section-1 .u-btn-13 {
+  .u-section-1 .u-btn-14 {
     margin-top: 0;
     margin-left: -15px;
   }
 
-  .u-section-1 .u-btn-14 {
+  .u-section-1 .u-btn-15 {
     margin-top: 0;
     margin-left: 474px;
     padding-left: 100px;
     padding-right: 100px;
   }
 
-  .u-section-1 .u-btn-15 {
+  .u-section-1 .u-btn-16 {
     margin-top: 0;
     margin-left: -16px;
   }
 
-  .u-section-1 .u-btn-16 {
+  .u-section-1 .u-btn-17 {
     margin-top: 0;
     margin-left: 237px;
   }
 
-  .u-section-1 .u-btn-17 {
+  .u-section-1 .u-btn-18 {
     margin-top: 0;
     margin-right: -15px;
     padding-right: 92px;
     padding-left: 91px;
   }
 
-  .u-section-1 .u-btn-18 {
+  .u-section-1 .u-btn-19 {
     margin-top: 0;
     margin-left: 476px;
     padding-right: 13px;
     padding-left: 12px;
   }
 
-  .u-section-1 .u-btn-19 {
+  .u-section-1 .u-btn-20 {
     margin-top: 0;
     margin-left: 721px;
     padding-left: 29px;
     padding-right: 29px;
   }
 
-  .u-section-1 .u-btn-20 {
+  .u-section-1 .u-btn-21 {
     margin-top: 0;
     margin-left: -16px;
     padding-right: 134px;
     padding-left: 133px;
   }
 
-  .u-section-1 .u-btn-21 {
+  .u-section-1 .u-btn-22 {
     margin-top: 0;
     margin-left: 721px;
     padding-right: 20px;
     padding-left: 19px;
   }
 
-  .u-section-1 .u-btn-22 {
+  .u-section-1 .u-btn-23 {
     margin-top: 0;
     margin-left: 476px;
     padding-left: 21px;
     padding-right: 21px;
   }
 
-  .u-section-1 .u-btn-23 {
+  .u-section-1 .u-btn-24 {
     margin-top: 0;
     margin-left: -16px;
     padding-right: 84px;
@@ -363,89 +375,89 @@
     margin-right: 24px;
   }
 
-  .u-section-1 .u-btn-1 {
+  .u-section-1 .u-btn-2 {
     margin-left: 126px;
   }
 
-  .u-section-1 .u-btn-2 {
+  .u-section-1 .u-btn-3 {
     margin-right: 0;
     margin-left: auto;
   }
 
-  .u-section-1 .u-btn-3 {
+  .u-section-1 .u-btn-4 {
     margin-left: 364px;
   }
 
-  .u-section-1 .u-btn-5 {
-    margin-left: 125px;
-  }
-
   .u-section-1 .u-btn-6 {
-    margin-left: 365px;
+    margin-left: 125px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-8 {
-    margin-left: 125px;
-  }
-
-  .u-section-1 .u-btn-9 {
     margin-left: 365px;
   }
 
+  .u-section-1 .u-btn-8 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-left: 125px;
+  }
+
   .u-section-1 .u-btn-10 {
+    margin-left: 365px;
+  }
+
+  .u-section-1 .u-btn-11 {
     margin-left: auto;
     margin-right: 0;
   }
 
-  .u-section-1 .u-btn-12 {
-    margin-left: 125px;
-  }
-
   .u-section-1 .u-btn-13 {
-    margin-left: 365px;
+    margin-left: 125px;
   }
 
   .u-section-1 .u-btn-14 {
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-15 {
-    margin-left: 125px;
-  }
-
-  .u-section-1 .u-btn-16 {
     margin-left: 365px;
   }
 
-  .u-section-1 .u-btn-17 {
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-btn-18 {
-    margin-left: 118px;
-  }
-
-  .u-section-1 .u-btn-19 {
-    margin-left: 367px;
-  }
-
-  .u-section-1 .u-btn-20 {
+  .u-section-1 .u-btn-15 {
     margin-left: auto;
   }
 
-  .u-section-1 .u-btn-21 {
-    margin-left: 367px;
+  .u-section-1 .u-btn-16 {
+    margin-left: 125px;
   }
 
-  .u-section-1 .u-btn-22 {
+  .u-section-1 .u-btn-17 {
+    margin-left: 365px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-btn-19 {
     margin-left: 118px;
   }
 
+  .u-section-1 .u-btn-20 {
+    margin-left: 367px;
+  }
+
+  .u-section-1 .u-btn-21 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-22 {
+    margin-left: 367px;
+  }
+
   .u-section-1 .u-btn-23 {
+    margin-left: 118px;
+  }
+
+  .u-section-1 .u-btn-24 {
     margin-left: auto;
   }
 
@@ -462,59 +474,59 @@
     min-height: 862px;
   }
 
-  .u-section-1 .u-btn-1 {
+  .u-section-1 .u-btn-2 {
     margin-left: 32px;
   }
 
-  .u-section-1 .u-btn-3 {
+  .u-section-1 .u-btn-4 {
     margin-left: 279px;
   }
 
-  .u-section-1 .u-btn-5 {
+  .u-section-1 .u-btn-6 {
     margin-left: 280px;
   }
 
-  .u-section-1 .u-btn-6 {
-    margin-left: 30px;
-  }
-
-  .u-section-1 .u-btn-8 {
+  .u-section-1 .u-btn-7 {
     margin-left: 30px;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-left: 280px;
-  }
-
-  .u-section-1 .u-btn-12 {
-    margin-left: 32px;
-  }
-
-  .u-section-1 .u-btn-13 {
-    margin-left: 279px;
-  }
-
-  .u-section-1 .u-btn-15 {
-    margin-left: 32px;
-  }
-
-  .u-section-1 .u-btn-16 {
-    margin-left: 279px;
-  }
-
-  .u-section-1 .u-btn-18 {
     margin-left: 30px;
   }
 
-  .u-section-1 .u-btn-19 {
-    margin-left: 275px;
+  .u-section-1 .u-btn-10 {
+    margin-left: 280px;
   }
 
-  .u-section-1 .u-btn-21 {
+  .u-section-1 .u-btn-13 {
+    margin-left: 32px;
+  }
+
+  .u-section-1 .u-btn-14 {
+    margin-left: 279px;
+  }
+
+  .u-section-1 .u-btn-16 {
+    margin-left: 32px;
+  }
+
+  .u-section-1 .u-btn-17 {
+    margin-left: 279px;
+  }
+
+  .u-section-1 .u-btn-19 {
+    margin-left: 30px;
+  }
+
+  .u-section-1 .u-btn-20 {
     margin-left: 275px;
   }
 
   .u-section-1 .u-btn-22 {
+    margin-left: 275px;
+  }
+
+  .u-section-1 .u-btn-23 {
     margin-left: 30px;
   }
 
@@ -537,27 +549,21 @@
     min-height: 750px;
   }
 
-  .u-section-1 .u-btn-1 {
+  .u-section-1 .u-btn-2 {
     margin-left: auto;
     padding-right: 89px;
     padding-left: 88px;
   }
 
-  .u-section-1 .u-btn-2 {
+  .u-section-1 .u-btn-3 {
     padding-right: 77px;
     padding-left: 76px;
   }
 
-  .u-section-1 .u-btn-3 {
+  .u-section-1 .u-btn-4 {
     margin-left: auto;
     padding-right: 69px;
     padding-left: 68px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-left: auto;
-    padding-right: 82px;
-    padding-left: 81px;
   }
 
   .u-section-1 .u-btn-6 {
@@ -567,14 +573,14 @@
   }
 
   .u-section-1 .u-btn-7 {
-    padding-right: 55px;
-    padding-left: 54px;
+    margin-left: auto;
+    padding-right: 82px;
+    padding-left: 81px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-left: auto;
-    padding-right: 84px;
-    padding-left: 83px;
+    padding-right: 55px;
+    padding-left: 54px;
   }
 
   .u-section-1 .u-btn-9 {
@@ -584,69 +590,75 @@
   }
 
   .u-section-1 .u-btn-10 {
+    margin-left: auto;
+    padding-right: 84px;
+    padding-left: 83px;
+  }
+
+  .u-section-1 .u-btn-11 {
     padding-left: 127px;
     padding-right: 127px;
   }
 
-  .u-section-1 .u-btn-12 {
+  .u-section-1 .u-btn-13 {
     margin-left: auto;
     padding-left: 65px;
     padding-right: 65px;
   }
 
-  .u-section-1 .u-btn-13 {
+  .u-section-1 .u-btn-14 {
     margin-left: auto;
     padding-right: 81px;
     padding-left: 80px;
   }
 
-  .u-section-1 .u-btn-14 {
+  .u-section-1 .u-btn-15 {
     padding-right: 20px;
     padding-left: 19px;
   }
 
-  .u-section-1 .u-btn-15 {
+  .u-section-1 .u-btn-16 {
     margin-left: auto;
     padding-right: 95px;
     padding-left: 94px;
   }
 
-  .u-section-1 .u-btn-16 {
+  .u-section-1 .u-btn-17 {
     margin-left: auto;
     padding-left: 95px;
     padding-right: 95px;
   }
 
-  .u-section-1 .u-btn-18 {
+  .u-section-1 .u-btn-19 {
     margin-left: auto;
     padding-left: 55px;
     padding-right: 55px;
   }
 
-  .u-section-1 .u-btn-19 {
+  .u-section-1 .u-btn-20 {
     margin-left: auto;
     padding-right: 77px;
     padding-left: 76px;
   }
 
-  .u-section-1 .u-btn-20 {
+  .u-section-1 .u-btn-21 {
     padding-left: 53px;
     padding-right: 53px;
   }
 
-  .u-section-1 .u-btn-21 {
+  .u-section-1 .u-btn-22 {
     margin-left: auto;
     padding-right: 63px;
     padding-left: 62px;
   }
 
-  .u-section-1 .u-btn-22 {
+  .u-section-1 .u-btn-23 {
     margin-left: auto;
     padding-right: 65px;
     padding-left: 63px;
   }
 
-  .u-section-1 .u-btn-23 {
+  .u-section-1 .u-btn-24 {
     padding-left: 8px;
     padding-right: 8px;
   }
@@ -665,10 +677,6 @@
 } .u-section-2 {
   background-image: url("images/img4.jpg");
   background-position: 50% 50%;
-}
-
-.u-section-2 .u-sheet-1 {
-  min-height: 1701px;
 }
 
 .u-section-2 .u-text-1 {
@@ -794,13 +802,26 @@
   font-size: 1rem;
 }
 
+.u-section-2 .u-btn-24 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+}
+
 @media (max-width: 1199px) {
   .u-section-2 .u-text-1 {
     width: auto;
   }
+
+  .u-section-2 .u-btn-24 {
+    font-size: 1rem;
+  }
 }
 
 @media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 1701px;
+  }
+
   .u-section-2 .u-text-1 {
     margin-top: 60px;
   }
@@ -939,8 +960,14 @@
   }
 
   .u-section-2 .u-btn-23 {
-    margin: 10px auto 60px;
+    margin: 10px auto 0;
     padding: 10px 89px 10px 88px;
+  }
+
+  .u-section-2 .u-btn-24 {
+    font-size: 0.875rem;
+    margin: 10px auto 60px;
+    padding: 11px 62px 12px;
   }
 } .u-section-3 {
   background-image: url("images/img10.jpg");
@@ -1074,6 +1101,17 @@
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
+.u-section-3 .u-btn-24 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-btn-24 {
+    font-size: 1rem;
+  }
+}
+
 @media (max-width: 767px) {
    .u-section-3 {
     background-position: 72.33% 50%;
@@ -1204,8 +1242,14 @@
   }
 
   .u-section-3 .u-btn-23 {
-    margin: 10px auto 60px;
+    margin: 10px auto 0;
     padding: 10px 89px 10px 88px;
+  }
+
+  .u-section-3 .u-btn-24 {
+    font-size: 0.875rem;
+    margin: 10px auto 60px;
+    padding: 11px 62px 12px;
   }
 }
 
@@ -1224,7 +1268,7 @@
 }
 
 .u-section-4 .u-sheet-1 {
-  min-height: 1288px;
+  min-height: 1717px;
 }
 
 .u-section-4 .u-text-1 {
@@ -1364,6 +1408,12 @@
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
+.u-section-4 .u-btn-24 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  font-size: 1rem;
+}
+
 @media (max-width: 1199px) {
   .u-section-4 .u-text-1 {
     width: auto;
@@ -1373,10 +1423,6 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 1717px;
-  }
-
   .u-section-4 .u-text-1 {
     margin-top: 51px;
   }
@@ -1422,7 +1468,7 @@
   }
 
   .u-section-4 .u-btn-9 {
-    margin: 227px auto 0 125px;
+    margin: 227px auto 0 119px;
     padding: 10px 83px 10px 82px;
   }
 
@@ -1468,8 +1514,8 @@
   }
 
   .u-section-4 .u-btn-18 {
-    margin: -207px auto 0;
-    padding: 10px 134px 10px 133px;
+    margin: -207px auto 0 120px;
+    padding: 10px 10px 10px 8px;
   }
 
   .u-section-4 .u-btn-19 {
@@ -1499,8 +1545,14 @@
   }
 
   .u-section-4 .u-btn-23 {
-    margin: 63px 128px 60px auto;
+    margin: 63px 128px 0 367px;
     padding: 10px 43px;
+  }
+
+  .u-section-4 .u-btn-24 {
+    font-size: 0.875rem;
+    margin: 117px 124px 60px 367px;
+    padding: 11px 19px 12px 18px;
   }
 }
 
@@ -1570,6 +1622,10 @@
     margin-left: auto;
   }
 
+  .u-section-4 .u-btn-18 {
+    margin-left: 0;
+  }
+
   .u-section-4 .u-btn-19 {
     margin-left: auto;
   }
@@ -1589,6 +1645,12 @@
 
   .u-section-4 .u-btn-23 {
     margin-right: 0;
+    margin-left: 315px;
+  }
+
+  .u-section-4 .u-btn-24 {
+    margin-right: 0;
+    margin-left: 315px;
   }
 }
 
@@ -1604,6 +1666,14 @@
 
   .u-section-4 .u-text-2 {
     width: 340px;
+  }
+
+  .u-section-4 .u-btn-23 {
+    margin-left: 115px;
+  }
+
+  .u-section-4 .u-btn-24 {
+    margin-left: 115px;
   }
 } .u-section-5 {
   background-image: url("images/img13.jpg");
@@ -1751,6 +1821,12 @@
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
+.u-section-5 .u-btn-24 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  font-size: 1rem;
+}
+
 @media (max-width: 1199px) {
   .u-section-5 .u-sheet-1 {
     min-height: 1225px;
@@ -1789,8 +1865,8 @@
   }
 
   .u-section-5 .u-btn-6 {
-    margin: -45px auto 0 474px;
-    padding: 10px 135px;
+    margin: -45px 227px 0 auto;
+    padding: 10px 15px 10px 14px;
   }
 
   .u-section-5 .u-btn-7 {
@@ -1883,13 +1959,19 @@
   }
 
   .u-section-5 .u-btn-22 {
-    margin: -961px -15px 0 auto;
+    margin: -907px -15px 0 auto;
     padding: 10px 72px 10px 71px;
   }
 
   .u-section-5 .u-btn-23 {
-    margin: 63px -15px 60px auto;
+    margin: 9px -15px 0 auto;
     padding: 10px 45px 10px 44px;
+  }
+
+  .u-section-5 .u-btn-24 {
+    font-size: 0.875rem;
+    margin: -153px -15px 60px auto;
+    padding: 11px 18px 12px;
   }
 }
 
@@ -1926,7 +2008,7 @@
 
   .u-section-5 .u-btn-6 {
     margin-top: 20px;
-    margin-left: auto;
+    margin-right: 7px;
   }
 
   .u-section-5 .u-btn-7 {
@@ -2012,6 +2094,10 @@
   .u-section-5 .u-btn-23 {
     margin-right: 0;
   }
+
+  .u-section-5 .u-btn-24 {
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 767px) {
@@ -2029,6 +2115,7 @@
 
   .u-section-5 .u-btn-6 {
     margin-top: -45px;
+    margin-right: 0;
   }
 
   .u-section-5 .u-btn-8 {
