--- a/Windows-Mini-сборки.css
+++ b/Windows-Mini-сборки.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 12582px;
+  min-height: 17781px;
 }
 
 .u-section-1 .u-text-1 {
@@ -227,12 +227,130 @@
 
 .u-section-1 .u-btn-18 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 10px auto 49px;
+  margin: 10px auto 0;
   padding: 10px 43px;
+}
+
+.u-section-1 .u-text-12 {
+  margin: 120px auto 0;
+}
+
+.u-section-1 .u-image-14 {
+  width: 900px;
+  height: 675px;
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-image-15 {
+  width: 900px;
+  height: 675px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-text-13 {
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-btn-19 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 46px auto 0;
+}
+
+.u-section-1 .u-btn-20 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 10px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-21 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 10px auto 0;
+  padding: 10px 43px 10px 42px;
+}
+
+.u-section-1 .u-text-14 {
+  margin: 120px auto 0;
+}
+
+.u-section-1 .u-image-16 {
+  width: 900px;
+  height: 675px;
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-text-15 {
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-btn-22 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 46px auto 0;
+}
+
+.u-section-1 .u-btn-23 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 10px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-24 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 10px auto 0;
+  padding: 10px 43px;
+}
+
+.u-section-1 .u-text-16 {
+  margin: 120px auto 0;
+}
+
+.u-section-1 .u-image-17 {
+  width: 900px;
+  height: 675px;
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-text-17 {
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-btn-25 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 46px auto 0;
+}
+
+.u-section-1 .u-btn-26 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 10px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-27 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 10px auto 0;
+  padding: 10px 43px;
+}
+
+.u-section-1 .u-btn-28 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 10px auto 0;
+  padding: 10px 52px 10px 51px;
+}
+
+.u-section-1 .u-btn-29 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 10px auto 0;
+  padding: 10px 63px 10px 62px;
+}
+
+.u-section-1 .u-btn-30 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 10px auto 60px;
+  padding: 10px 65px 10px 64px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-text-3 {
+    width: auto;
     margin-left: 92px;
     margin-right: 92px;
   }
@@ -242,6 +360,7 @@
   }
 
   .u-section-1 .u-text-5 {
+    width: auto;
     margin-left: 27px;
     margin-right: 27px;
   }
@@ -251,6 +370,7 @@
   }
 
   .u-section-1 .u-text-7 {
+    width: auto;
     margin-left: 27px;
     margin-right: 27px;
   }
@@ -260,6 +380,7 @@
   }
 
   .u-section-1 .u-text-9 {
+    width: auto;
     margin-left: 92px;
     margin-right: 92px;
   }
@@ -277,7 +398,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 10989px;
+    min-height: 15511px;
   }
 
   .u-section-1 .u-text-1 {
@@ -305,7 +426,6 @@
   }
 
   .u-section-1 .u-text-3 {
-    width: auto;
     margin-left: 0;
     margin-right: 0;
   }
@@ -359,7 +479,6 @@
   }
 
   .u-section-1 .u-text-5 {
-    width: auto;
     margin-left: 0;
     margin-right: 0;
   }
@@ -401,7 +520,6 @@
   }
 
   .u-section-1 .u-text-7 {
-    width: auto;
     margin-left: 0;
     margin-right: 0;
   }
@@ -438,7 +556,6 @@
   }
 
   .u-section-1 .u-text-9 {
-    width: auto;
     margin-left: 0;
     margin-right: 0;
   }
@@ -473,15 +590,48 @@
   .u-section-1 .u-btn-18 {
     margin-bottom: 46px;
   }
+
+  .u-section-1 .u-image-14 {
+    height: 540px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-15 {
+    height: 540px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-16 {
+    height: 540px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-text-15 {
+    width: auto;
+    margin-top: 46px;
+  }
+
+  .u-section-1 .u-image-17 {
+    height: 540px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 9808px;
+    min-height: 14075px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 29px;
+    margin-top: 516px;
     margin-left: 31px;
     margin-right: 31px;
   }
@@ -691,11 +841,45 @@
   .u-section-1 .u-btn-18 {
     margin-bottom: 29px;
   }
+
+  .u-section-1 .u-image-14 {
+    height: 405px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-15 {
+    height: 405px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-16 {
+    height: 405px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-text-15 {
+    margin-top: 58px;
+    margin-left: 23px;
+    margin-right: 23px;
+  }
+
+  .u-section-1 .u-image-17 {
+    height: 405px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 8487px;
+    min-height: 12006px;
   }
 
   .u-section-1 .u-text-1 {
@@ -779,8 +963,8 @@
   .u-section-1 .u-image-5 {
     height: 191px;
     width: 100%;
-    margin-left: 0;
-    margin-right: 0;
+    margin-right: auto;
+    margin-left: 12px;
   }
 
   .u-section-1 .u-image-6 {
@@ -792,7 +976,7 @@
 
   .u-section-1 .u-text-5 {
     margin-right: auto;
-    margin-left: -24px;
+    margin-left: -12px;
   }
 
   .u-section-1 .u-btn-7 {
@@ -928,5 +1112,128 @@
   .u-section-1 .u-btn-18 {
     margin-left: -72px;
     margin-right: -72px;
+  }
+
+  .u-section-1 .u-text-12 {
+    width: auto;
+    margin-left: -26px;
+    margin-right: -26px;
+  }
+
+  .u-section-1 .u-image-14 {
+    width: 340px;
+    height: 255px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-15 {
+    width: 340px;
+    height: 255px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-13 {
+    width: auto;
+    margin-left: -36px;
+    margin-right: -36px;
+  }
+
+  .u-section-1 .u-btn-19 {
+    margin-left: -82px;
+    margin-right: -82px;
+  }
+
+  .u-section-1 .u-btn-20 {
+    margin-left: -82px;
+    margin-right: -82px;
+  }
+
+  .u-section-1 .u-btn-21 {
+    margin-left: -82px;
+    margin-right: -82px;
+  }
+
+  .u-section-1 .u-text-14 {
+    width: auto;
+    margin-left: -16px;
+    margin-right: -16px;
+  }
+
+  .u-section-1 .u-image-16 {
+    width: 340px;
+    height: 255px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-15 {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+
+  .u-section-1 .u-btn-22 {
+    margin-left: -70px;
+    margin-right: -70px;
+  }
+
+  .u-section-1 .u-btn-23 {
+    margin-left: -70px;
+    margin-right: -70px;
+  }
+
+  .u-section-1 .u-btn-24 {
+    margin-left: -70px;
+    margin-right: -70px;
+  }
+
+  .u-section-1 .u-text-16 {
+    width: auto;
+    margin-left: -35px;
+    margin-right: -35px;
+  }
+
+  .u-section-1 .u-image-17 {
+    width: 340px;
+    height: 255px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-17 {
+    width: auto;
+    margin-left: -35px;
+    margin-right: -35px;
+  }
+
+  .u-section-1 .u-btn-25 {
+    margin-left: -83px;
+    margin-right: -83px;
+  }
+
+  .u-section-1 .u-btn-26 {
+    margin-left: -83px;
+    margin-right: -83px;
+  }
+
+  .u-section-1 .u-btn-27 {
+    margin-left: -83px;
+    margin-right: -83px;
+  }
+
+  .u-section-1 .u-btn-28 {
+    margin-left: -83px;
+    margin-right: -83px;
+  }
+
+  .u-section-1 .u-btn-29 {
+    margin-left: -83px;
+    margin-right: -83px;
+  }
+
+  .u-section-1 .u-btn-30 {
+    margin-left: -83px;
+    margin-right: -83px;
   }
 }
