--- a/Windows-Mini-сборки.css
+++ b/Windows-Mini-сборки.css
@@ -289,13 +289,13 @@
 
 .u-section-1 .u-btn-23 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 10px auto 0;
+  margin: 9px auto 0;
   padding: 10px 41px;
 }
 
 .u-section-1 .u-btn-24 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 10px auto 0;
+  margin: 11px auto 0;
   padding: 10px 43px;
 }
 
@@ -333,19 +333,19 @@
 .u-section-1 .u-btn-28 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 10px auto 0;
-  padding: 10px 52px 10px 51px;
+  padding: 10px 37px;
 }
 
 .u-section-1 .u-btn-29 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 10px auto 0;
-  padding: 10px 63px 10px 62px;
+  padding: 10px 48px;
 }
 
 .u-section-1 .u-btn-30 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 10px auto 60px;
-  padding: 10px 65px 10px 64px;
+  padding: 10px 50px 10px 49px;
 }
 
 @media (max-width: 1199px) {
@@ -1174,18 +1174,18 @@
   }
 
   .u-section-1 .u-btn-22 {
-    margin-left: -70px;
-    margin-right: -70px;
+    margin-left: -71px;
+    margin-right: -71px;
   }
 
   .u-section-1 .u-btn-23 {
-    margin-left: -70px;
-    margin-right: -70px;
+    margin-left: -71px;
+    margin-right: -71px;
   }
 
   .u-section-1 .u-btn-24 {
-    margin-left: -70px;
-    margin-right: -70px;
+    margin-left: -71px;
+    margin-right: -71px;
   }
 
   .u-section-1 .u-text-16 {
