--- a/Windows-Lite-сборки.css
+++ b/Windows-Lite-сборки.css
@@ -903,6 +903,10 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-text-1 {
+    margin-top: 29px;
+  }
+
   .u-section-2 .u-image-1 {
     height: 303px;
   }
@@ -938,30 +942,18 @@
 
   .u-section-2 .u-image-5 {
     height: 302px;
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-2 .u-image-6 {
     height: 302px;
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-2 .u-image-7 {
     height: 302px;
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-2 .u-image-8 {
     height: 302px;
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-2 .u-text-5 {
@@ -983,36 +975,6 @@
     align-self: center;
     margin: 9px auto 0;
     padding: 10px 43px 10px 42px;
-  }
-
-  .u-section-2 .u-image-9 {
-    width: 540px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-image-10 {
-    width: 540px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-image-12 {
-    width: 540px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-image-13 {
-    width: 540px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-image-14 {
-    width: 540px;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-2 .u-text-7 {
@@ -1095,30 +1057,18 @@
 
   .u-section-2 .u-image-5 {
     height: 195px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
   }
 
   .u-section-2 .u-image-6 {
     height: 195px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
   }
 
   .u-section-2 .u-image-7 {
     height: 195px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
   }
 
   .u-section-2 .u-image-8 {
     height: 195px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
   }
 
   .u-section-2 .u-btn-4 {
@@ -1143,16 +1093,16 @@
 
   .u-section-2 .u-image-9 {
     height: 190px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-2 .u-image-10 {
     height: 190px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-2 .u-image-11 {
@@ -1161,23 +1111,23 @@
 
   .u-section-2 .u-image-12 {
     height: 190px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-2 .u-image-13 {
     height: 190px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-2 .u-image-14 {
     height: 190px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-2 .u-btn-7 {
