--- a/Windows-XP-сборки.css
+++ b/Windows-XP-сборки.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1876px;
+  min-height: 1966px;
 }
 
 .u-section-1 .u-text-1 {
@@ -33,12 +33,26 @@
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 42px auto 60px;
+  margin: 35px auto 0;
+}
+
+.u-section-1 .u-btn-2 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 8px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-3 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 8px auto 51px;
+  padding: 10px 43px 10px 42px;
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1674px;
+    min-height: 1764px;
   }
 
   .u-section-1 .u-image-1 {
@@ -58,7 +72,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1472px;
+    min-height: 1658px;
   }
 
   .u-section-1 .u-image-1 {
@@ -74,11 +88,15 @@
     margin-right: initial;
     margin-left: initial;
   }
+
+  .u-section-1 .u-btn-3 {
+    margin-bottom: 60px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1246px;
+    min-height: 1622px;
   }
 
   .u-section-1 .u-text-1 {
@@ -112,7 +130,17 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: -35px;
-    margin-right: -35px;
+    margin-left: -47px;
+    margin-right: -47px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: -47px;
+    margin-right: -47px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: -47px;
+    margin-right: -47px;
   }
 }
